This commit is to correct the table of contents alignment. Previous push had the columns creating rows.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -59,4 +59,5 @@ vertical-align: -6px;
 
 .tableContents{
     text-align: center;
+    border: 1px solid black;
 }
